<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Waypoint Navi</string>
    <string name="button_prevwp">&lt;&lt;Prev.</string>
    <string name="button_start_navi">Start Navi</string>
    <string name="button_stop_navi">Stop Navi</string><string name="button_nextwp">Next&gt;&gt;</string>
    <string name="text_InvalidKMLFormat">Invalid KML format</string>
    <string name="text_FileNotFound">File not found</string>
    <string name="text_OpenKML">Open a KML file</string>
    <string name="text_OpenGME">Open the Maps Engine</string>
    <string name="text_Setting">Preference...</string>
    <string name="text_Help">Online manual</string>
    <string name="text_Activated">Navigating to WP%d</string>
    <string name="text_KMLNotLoaded">KML not loaded</string>
    <string name="text_DownloadFailed">Can\'t download the KML file\nPlease check the sharing settings.</string>
    <string name="text_NoGPS">GPS device not found</string>
    <string name="pref_next_distance">Waypoint range (radius)</string>
    <string name="pref_wait_time">Wait time of restarting navigation</string>
    <string name="pref_kill_by_root">Surely restarting navigation</string>
    <string name="pref_kill_by_root_exp">Requires ROOT privilege</string>
    <string name="pref_kill_test">Google Maps kill test</string>
    <string name="perf_TrafficInfo">Show traffic information</string>
    <string name="pref_ReverseOrder">Guide in reverse order</string>
    <string name="URL_OnlineManual">https://translate.google.co.jp/translate?hl=ja&amp;sl=ja&amp;tl=en&amp;u=https%3A%2F%2Fsites.google.com%2Fsite%2Fvsdforgps%2Fhome%2Fwaypoint-navi</string>
</resources>
