<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:robobunny="http://robobunny.com"
>
	<CheckBoxPreference android:title="@string/pref_ReverseOrder" android:key="key_ReverseOrder"/><jp.dds.dds_lib.SeekBarPreference
		android:key="key_WaitTime"
		android:dialogTitle="@string/pref_wait_time"
		android:title="@string/pref_wait_time"
		android:defaultValue="20"
		android:max="100"
		robobunny:min="0"
		robobunny:unitsRight=" x0.1sec"
	/>
	<jp.dds.dds_lib.SeekBarPreference
		android:key="key_NextDistance"
		android:dialogTitle="@string/pref_next_distance"
		android:title="@string/pref_next_distance"
		android:defaultValue="50"
		android:max="100"
		robobunny:min="10"
		robobunny:unitsRight="m"
	/>
	<CheckBoxPreference android:key="key_traffic_info" android:title="@string/perf_TrafficInfo" />
	<CheckBoxPreference
		android:defaultValue="true"
		android:key="key_kill_by_root"
		android:summary="@string/pref_kill_by_root_exp"
		android:title="@string/pref_kill_by_root" />
	<CheckBoxPreference android:key="key_kill_test" android:title="@string/pref_kill_test"/>
</PreferenceScreen>
